@@ -21,6 +21,10 @@ CVS code -
 	- Fix erroneous #ifdef that resulted in the -d/--rebinddelete
 	  and -k/--cut options' not being printed when NANO_SMALL was
 	  defined. (DLR)
+  do_justify()
+	- Instead of breaking a line at a space and readding the space
+	  afterwards, just break the line after the space, as it's more
+	  efficient. (DLR)
 - utils.c:
   regexec_safe()
 	- Rename to safe_regexec() for consistency. (DLR)
